# Continual-Traversability-Learning

./: README.md
align_planner/: package.xml  setup.cfg  setup.py
align_planner/align_planner/: align_planner_node.py  align_planner_parameters.py  data_logger_node.py
align_planner/align_planner/models/: infocva.py  travNN.py
align_planner/align_planner/mppi/: jax_mppi.py
align_planner/align_planner/train/: datasets.py  ensemble.py  imost.py  mcmc_train_main.py  trainutils.py
align_planner/align_planner/utils/: buffers.py  ptype.py  ros2_utils.py  tractionEKF.py
align_planner/config/: align_planner_param.yaml  data_logger_param.yaml
align_planner/launch/: align_planner.launch.py  data_logger.launch.py
feat_processing/: package.xml  setup.cfg  setup.py
feat_processing/config/: feat_param.yaml
feat_processing/feat_processing/: feat_processing_node.py  feat_processing_recording_node.py  image_parameters.py
feat_processing/feat_processing/models/: autoencoder.py  networks.py
feat_processing/feat_processing/train/: datasets.py  dino_backend_train.py
feat_processing/launch/: feat_processing.launch.py  feat_recording.launch.py
