<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>feat_processing</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hojin@unist.ac.kr">Hojin Lee</maintainer>
  <license>MIT</license>


  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>elevation_map_msgs</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
